--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ python-dotenv = "1.0.0"
 [tool.poetry.scripts]
 price_bot = "price_bot.__main__:main"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
