--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,7 @@ on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-    name: Python ${{ matrix.python-version }}
+    name: Run tests
     steps:
       - uses: actions/checkout@v4
 
