--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DISCORD_TOKEN_PRICING=
-WEB3_PROVIDER_URI=https://opt-mainnet.g.alchemy.com/v2/TYO_nS5GvA15ccCxYMEzTkAxQHrqk801
+WEB3_PROVIDER_URI=https://mainnet.optimism.io
 LP_SUGAR_ADDRESS=0xa1F09427fa89b92e9B4e4c7003508C8614F19791
 PRICE_ORACLE_ADDRESS=0x07F544813E9Fb63D57a92f28FbD3FF0f7136F5cE
 # token we are converting from
