rename target network to protocol name

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DISCORD_TOKEN_PRICING=
 DISCORD_TOKEN_TVL=
 WEB3_PROVIDER_URI=https://mainnet.optimism.io
-TARGET_NETWORK=Velodrome
+PROTOCOL_NAME=Velodrome
 LP_SUGAR_ADDRESS=0xa1F09427fa89b92e9B4e4c7003508C8614F19791
 PRICE_ORACLE_ADDRESS=0x07F544813E9Fb63D57a92f28FbD3FF0f7136F5cE
 PRICE_BATCH_SIZE=40
