--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 DISCORD_TOKEN_PRICING=
+DISCORD_TOKEN_TVL=
 WEB3_PROVIDER_URI=https://mainnet.optimism.io
+PROTOCOL_NAME=Velodrome
 LP_SUGAR_ADDRESS=0xa1F09427fa89b92e9B4e4c7003508C8614F19791
 PRICE_ORACLE_ADDRESS=0x07F544813E9Fb63D57a92f28FbD3FF0f7136F5cE
+PRICE_BATCH_SIZE=40
 # token we are converting from
 TOKEN_ADDRESS=0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db
 CONNECTOR_TOKENS_ADDRESSES=0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db,0x4200000000000000000000000000000000000042,0x4200000000000000000000000000000000000006,0x8c6f28f2f1a3c87f0f938b96d27520d9751ec8d9,0x1f32b1c2345538c0c6f582fcb022739c4a194ebb,0xbfd291da8a403daaf7e5e9dc1ec0aceacd4848b9,0xc3864f98f2a61a7caeb95b039d031b4e2f55e0e9,0x9485aca5bbbe1667ad97c7fe7c4531a624c8b1ed,0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1
