--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DISCORD_TOKEN_PRICING=
 DISCORD_TOKEN_TVL=
+DISCORD_TOKEN_FEES=
 WEB3_PROVIDER_URI=https://mainnet.optimism.io
 PROTOCOL_NAME=Velodrome
 LP_SUGAR_ADDRESS=0xa1F09427fa89b92e9B4e4c7003508C8614F19791
