--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ protobuf = "4.21.6"
 async-lru = "2.0.4"
 discord-py = "2.3.2"
 python-dotenv = "1.0.0"
+thefuzz = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
