--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@ DISCORD_TOKEN_PRICING=
 DISCORD_TOKEN_TVL=
 DISCORD_TOKEN_FEES=
 DISCORD_TOKEN_REWARDS=
+DISCORD_TOKEN_COMMANDER=
 WEB3_PROVIDER_URI=https://mainnet.optimism.io
 PROTOCOL_NAME=Velodrome
+APP_BASE_URL=https://velodrome.finance
 LP_SUGAR_ADDRESS=0xa1F09427fa89b92e9B4e4c7003508C8614F19791
 PRICE_ORACLE_ADDRESS=0x07F544813E9Fb63D57a92f28FbD3FF0f7136F5cE
 PRICE_BATCH_SIZE=40
@@ -16,5 +18,7 @@ STABLE_TOKEN_ADDRESS=0x7F5c764cBc14f9669B88837ca1490cCa17c31607
 BOT_TICKER_INTERVAL_MINUTES=1
 # caching for Sugar tokens
 SUGAR_TOKENS_CACHE_MINUTES=10
+# caching for Sugar LPs
+SUGAR_LPS_CACHE_MINUTES=10
 # caching for oracle pricing
 ORACLE_PRICES_CACHE_MINUTES=10
