--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DISCORD_TOKEN_TVL=
 DISCORD_TOKEN_FEES=
 DISCORD_TOKEN_REWARDS=
 DISCORD_TOKEN_COMMANDER=
-WEB3_PROVIDER_URI=https://mainnet.optimism.io
+WEB3_PROVIDER_URI=https://optimism-mainnet.wallet.coinbase.com
 PROTOCOL_NAME=Velodrome
 APP_BASE_URL=https://velodrome.finance
 LP_SUGAR_ADDRESS=0x72F7e299D2634D4036ce37A495600B157570559C
