--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ DISCORD_TOKEN_TVL=
 DISCORD_TOKEN_FEES=
 DISCORD_TOKEN_REWARDS=
 DISCORD_TOKEN_COMMANDER=
-WEB3_PROVIDER_URI=https://mainnet.optimism.io
+WEB3_PROVIDER_URI=https://optimism-mainnet.wallet.coinbase.com
 PROTOCOL_NAME=Velodrome
 APP_BASE_URL=https://velodrome.finance
-LP_SUGAR_ADDRESS=0x6A4a8e26D9bA37515F331de7fbA2c6852f55128E
+LP_SUGAR_ADDRESS=0x72F7e299D2634D4036ce37A495600B157570559C
 PRICE_ORACLE_ADDRESS=0xcA97e5653d775cA689BED5D0B4164b7656677011
 PRICE_BATCH_SIZE=40
 TOKEN_ADDRESS=0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db
