--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,17 @@ DISCORD_TOKEN_TVL=
 DISCORD_TOKEN_FEES=
 DISCORD_TOKEN_REWARDS=
 DISCORD_TOKEN_COMMANDER=
-WEB3_PROVIDER_URI=https://optimism-mainnet.wallet.coinbase.com
-PROTOCOL_NAME=Velodrome
-APP_BASE_URL=https://velodrome.finance
-LP_SUGAR_ADDRESS=0x72F7e299D2634D4036ce37A495600B157570559C
-PRICE_ORACLE_ADDRESS=0xcA97e5653d775cA689BED5D0B4164b7656677011
+WEB3_PROVIDER_URI=https://mainnet.base.org
+PROTOCOL_NAME=Aerodrome
+APP_BASE_URL=https://aerodrome.finance
+LP_SUGAR_ADDRESS=0xa7638D351040e2ADCe3EcA81b07132c5Df4B99Bd
+PRICE_ORACLE_ADDRESS=0xee717411f6E44F9feE011835C8E6FAaC5dEfF166
 PRICE_BATCH_SIZE=40
-TOKEN_ADDRESS=0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db
-CONNECTOR_TOKENS_ADDRESSES=0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db,0x4200000000000000000000000000000000000042,0x4200000000000000000000000000000000000006,0x8c6f28f2f1a3c87f0f938b96d27520d9751ec8d9,0x1f32b1c2345538c0c6f582fcb022739c4a194ebb,0xbfd291da8a403daaf7e5e9dc1ec0aceacd4848b9,0xc3864f98f2a61a7caeb95b039d031b4e2f55e0e9,0x9485aca5bbbe1667ad97c7fe7c4531a624c8b1ed,0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1
-STABLE_TOKEN_ADDRESS=0x7F5c764cBc14f9669B88837ca1490cCa17c31607
+TOKEN_ADDRESS=0x940181a94A35A4569E4529A3CDfB74e38FD98631
+CONNECTOR_TOKENS_ADDRESSES=0x833589fcd6edb6e08f4c7c32d4f71b54bda02913,0x940181a94A35A4569E4529A3CDfB74e38FD98631,0x50c5725949A6F0c72E6C4a641F24049A917DB0Cb,0x4621b7a9c75199271f773ebd9a499dbd165c3191,0x4200000000000000000000000000000000000006,0xb79dd08ea68a908a97220c76d19a6aa9cbde4376,0xf7a0dd3317535ec4f4d29adf9d620b3d8d5d5069,0xcfa3ef56d303ae4faaba0592388f19d7c3399fb4
+STABLE_TOKEN_ADDRESS=0xd9aAEc86B65D86f6A7B5B1b0c42FFA531710b6CA
 BOT_TICKER_INTERVAL_MINUTES=1
 SUGAR_TOKENS_CACHE_MINUTES=10
 SUGAR_LPS_CACHE_MINUTES=10
 ORACLE_PRICES_CACHE_MINUTES=10
-UI_POOL_STATS_THUMBNAIL=https://i.imgur.com/lGbVYac.png
+UI_POOL_STATS_THUMBNAIL=https://i.imgur.com/Wo4vbqN.png
